--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
-:root{
-    --color-primary: #c3c03b;
-    --color-text: #ffffff;
-    --color-main-bg: #252631;
+:root {
+    --color-primary: #d4ff58;
+    --color-text-light: #fcfcfc;
+    --color-text-dark: #333;
     --color-text-grey: #c3c3c3;
+    --color-main-bg: #252631;
     --color-card-bg: #1f1e24;
 }
 
@@ -20,9 +21,9 @@ html {
     font-size: 62.5%;
 }
 
-body{
+body {
     background: var(--color-main-bg);
-    color: var(--color-text);
+    color: var(--color-text-light);
 }
 
 a {
@@ -34,7 +35,8 @@ img {
     width: 100%;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-weight: 500;
 }
 
@@ -49,25 +51,61 @@ h1, h2 {
     justify-content: center;
     align-items: center;
     height: 100%;
-  }
-  
-  .grid {
+}
+
+.grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
     justify-content: center;
     align-items: center;
     height: 100%;
-  }
+}
 
+.btn {
+    padding: 1rem 2rem;
+    background: var(--color-primary);
+    color: var(--color-text-dark);
+    border: 2px solid var(--color-primary);
+    display: inline-block;
+    transition: all 0.3s;
+    border-radius: 2rem;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.btn:hover {
+    background: transparent;
+    border-color: var(--color-primary);
+    color: #fff;
+}
 
 /* NAVBAR */
 
 nav {
     height: 7rem;
-    
+
 }
 
 nav .flex {
     justify-content: space-between;
+    gap: 2rem;
+}
+
+nav ul.flex {
+    gap: 3rem;
+}
+
+nav ul li a {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: all 0.3s;
+    color: var(--color-text-light);
+}
+
+nav ul li a:hover {
+    color: var(--color-primary);
+    transition: all 0.3s;
 }
