--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,17 @@ h2 {
     color: #fff;
 }
 
+/* ---- HEADER ---- */
+
+header {
+    height: 100vh;
+    background: linear-gradient(to left, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 90%), 
+                linear-gradient(to left bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,1) 100%),
+                url('/images/hero-wallpaper.jpg') no-repeat 35vh 0 /cover;
+    
+    z-index: 10;
+}
+
 /* ---- NAVBAR ---- */
 
 nav {
@@ -120,11 +131,6 @@ nav .menu-icon {
 }
 
 /* ---- HERO ---- */
-
-.hero {
-    height: calc(100vh-7rem);
-    background: linear-gradient(to right, #000, transparent) url(images/hero-wallpaper.jpg);
-}
 
 .hero .flex {
     justify-content: flex-start;
