--- a/style/style.css
+++ b/style/style.css
@@ -162,7 +162,7 @@ nav ul li a:hover {
     font-size: 1.8rem;
     color: var(--color-text-light);
     border: none;
-    border-bottom: 1px solid var(--color-primary);
+    border-bottom: 1px solid var(--color-text-light);
 }
 
 .search-bar i {
@@ -173,8 +173,13 @@ nav ul li a:hover {
 
 
 nav .menu-icon {
+    opacity: 0;
     position: absolute;
+    right: 3rem;
+    font-size: 2.2rem;
+    cursor: pointer;
 }
+
 
 /* ---- HERO ---- */
 
@@ -243,3 +248,32 @@ nav .menu-icon {
 }
 
 
+
+
+@media screen and (max-width:1115px) {
+    header {
+        height: 100vh;
+        background: linear-gradient(to left, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 90%), 
+                    linear-gradient(to left bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,1) 100%),
+                    url('/images/hero-wallpaper.jpg') no-repeat 25vh 0 /cover;
+    }
+
+    nav .menu-icon {
+        opacity: 1;
+    }
+
+    nav .links {
+        padding: 3rem 3rem;
+        background: rgba(21, 25, 10, .8);
+        position: absolute;
+        top: 6rem;
+        right: 6rem;
+        border-radius: 1rem;
+    }
+
+    nav .links .flex {
+        flex-direction: column;
+    }
+
+    
+}
