--- a/style/style.css
+++ b/style/style.css
@@ -102,7 +102,7 @@ header {
     height: 100vh;
     background: linear-gradient(to left, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 90%), 
                 linear-gradient(to left bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,1) 100%),
-                url('/images/hero-wallpaper.jpg') no-repeat 35vh 0 /cover;
+                url('images/hero-wallpaper.jpg') no-repeat 35vh 0 /cover;
     
     z-index: 10;
     display: flex;
